# handwritten-digit-recognition

./: Cargo.toml  README.md
src/: main.rs
src/cli/: args.rs  mod.rs
src/core/: error.rs  mod.rs  result.rs
src/gui/: app.rs
src/math/: matrix.rs  mod.rs
src/neural_network/: layer.rs  mod.rs  multilayer_singleton.rs
