# Copyright 2026 Nicolas Spijkerman
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

[package]
name = "handwritten-digit-recognition"
version = "0.1.0"
edition = "2024"
rust-version = "1.92"
authors = ["Nicolas Spijkerman <nicospijke@gmail.com>"]
categories = ["science", "algorithms", "mathematics"]
keywords = ["neural-network", "mnist", "machine-learning", "perceptron", "computer-vision"]
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/NickSpyker/handwritten-digit-recognition"
description = "Multilayer perceptron for MNIST handwritten digit recognition"

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
rand = { version = "0.9.2", features = ["default"] }
eframe = { version = "0.33.3", features = ["default"] }
clap = { version = "4.5.54", features = ["derive"] }
postcard = { version = "1.1.3", features = ["use-std"] }

[lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[lints.clippy]
all = { level = "deny", priority = -1 }
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
unwrap_used = "deny"
expect_used = "deny"
panic = "deny"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"

[[bin]]
name = "digirec"
path = "src/main.rs"
